Fix: wrap long text inside <h> and <p>;

--- a/MathEvent/MathEvent/wwwroot/css/MyStyle.css
+++ b/MathEvent/MathEvent/wwwroot/css/MyStyle.css
@@ -21,6 +21,10 @@
     --me-shadow-danger: #B76C7F;
 }
 
+h1, h2, h3, h4, h5, h6, p {
+    word-wrap: break-word;
+}
+
 .pop-container {
     position: relative;
 }
